--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -301,6 +301,7 @@
   <script src="features/classlists/classlists.controller.js"></script>
   <script src="features/classlists/classlist-edit.controller.js"></script>
   <script src="features/classlists/viewer.controller.js"></script>
+  <script src="features/classlists/attendance.controller.js"></script>
 
   <!-- Classrooms feature -->
   <script src="features/classrooms/classrooms.service.js"></script>
