--- a/frontend/unity-spa/index.html
+++ b/frontend/unity-spa/index.html
@@ -242,6 +242,7 @@
   <script src="features/students/checklist.service.js"></script>
   <script src="features/students/viewer.controller.js"></script>
   <script src="features/students/records.controller.js"></script>
+  <script src="features/students/checklist-edit.controller.js"></script>
   <!-- Student Dashboard -->
   <script src="features/student-dashboard/student-dashboard.controller.js"></script>
   <!-- Student Applicant Viewer -->
